.antlr/tpCompiladoresParser.java
// Generated from c:/antlr4/TP-Compiladores/tpCompiladores.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tpCompiladoresParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, COMMENT_SINGLE=48, COMMENT_MULTI=49, ID=50, NUM=51, 
		STRING=52, WS=53;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_ternaCall = 2, RULE_declaration = 3, 
		RULE_assignment = 4, RULE_expr = 5, RULE_operMathExpr = 6, RULE_operAndOr = 7, 
		RULE_operMathIndiv = 8, RULE_operMathIndivFor = 9, RULE_operCompExpr = 10, 
		RULE_ifStatement = 11, RULE_ternarioOper = 12, RULE_forStatement = 13, 
		RULE_forInit = 14, RULE_forInterme = 15, RULE_forUpdate = 16, RULE_whileStatement = 17, 
		RULE_funcDeclaration = 18, RULE_funCall = 19, RULE_parameterList = 20, 
		RULE_parameterListCallFun = 21, RULE_ioStatement = 22, RULE_block = 23, 
		RULE_type = 24, RULE_solos = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "ternaCall", "declaration", "assignment", "expr", 
			"operMathExpr", "operAndOr", "operMathIndiv", "operMathIndivFor", "operCompExpr", 
			"ifStatement", "ternarioOper", "forStatement", "forInit", "forInterme", 
			"forUpdate", "whileStatement", "funcDeclaration", "funCall", "parameterList", 
			"parameterListCallFun", "ioStatement", "block", "type", "solos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'return'", "'='", "','", "'+='", "'-='", "'('", "')'", 
			"'*'", "'/'", "'^'", "'%'", "'+'", "'-'", "'=='", "'>='", "'<='", "'>'", 
			"'<'", "'&&'", "'||'", "'and'", "'or'", "'&'", "'|'", "'++'", "'--'", 
			"'!='", "'if'", "'else'", "'?'", "':'", "'for'", "'while'", "'cin'", 
			"'>>'", "'mostrar'", "'<<'", "'{'", "'}'", "'entero'", "'float'", "'double'", 
			"'char'", "'bool'", "'void'", "'string'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"COMMENT_SINGLE", "COMMENT_MULTI", "ID", "NUM", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tpCompiladores.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tpCompiladoresParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(tpCompiladoresParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3657173980676228L) != 0)) {
				{
				{
				setState(52);
				stat();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FuncDeclarationContext funcDeclaration() {
			return getRuleContext(FuncDeclarationContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TernarioOperContext ternarioOper() {
			return getRuleContext(TernarioOperContext.class,0);
		}
		public IoStatementContext ioStatement() {
			return getRuleContext(IoStatementContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				declaration();
				setState(61);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				assignment();
				setState(65);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(64);
					match(T__0);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				funcDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				ifStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(69);
				forStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				whileStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(71);
				expr();
				setState(72);
				match(T__0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				ternarioOper();
				setState(76);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(75);
					match(T__0);
					}
					break;
				}
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(78);
				ioStatement();
				setState(79);
				match(T__0);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(81);
				match(T__1);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3377699921854592L) != 0)) {
					{
					setState(82);
					expr();
					}
				}

				setState(85);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TernaCallContext extends ParserRuleContext {
		public IoStatementContext ioStatement() {
			return getRuleContext(IoStatementContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TernaCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ternaCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterTernaCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitTernaCall(this);
		}
	}

	public final TernaCallContext ternaCall() throws RecognitionException {
		TernaCallContext _localctx = new TernaCallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ternaCall);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__34:
			case T__36:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				ioStatement();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				funCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public Token ID;
		public ExprContext expr;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(tpCompiladoresParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(tpCompiladoresParser.ID, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TernarioOperContext ternarioOper() {
			return getRuleContext(TernarioOperContext.class,0);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			type();
			setState(93);
			((DeclarationContext)_localctx).ID = match(ID);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(94);
				match(T__2);
				setState(97);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(95);
					((DeclarationContext)_localctx).expr = expr();
					}
					break;
				case 2:
					{
					setState(96);
					ternarioOper();
					}
					break;
				}
				}
			}

			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(101);
				match(T__3);
				setState(104);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(102);
					assignment();
					}
					break;
				case 2:
					{
					setState(103);
					((DeclarationContext)_localctx).ID = match(ID);
					}
					break;
				}
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        if (((DeclarationContext)_localctx).expr.v != 0) {
			            memory[((DeclarationContext)_localctx).ID->getText()] = ((DeclarationContext)_localctx).expr.v;  // Almacenamos la variable 
			        } else {
			            memory[((DeclarationContext)_localctx).ID->getText()] = 0;  // Valor por defecto es 0
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public Token ID;
		public Token op;
		public ExprContext expr;
		public TerminalNode ID() { return getToken(tpCompiladoresParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TernarioOperContext ternarioOper() {
			return getRuleContext(TernarioOperContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		int _la;
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				((AssignmentContext)_localctx).ID = match(ID);
				setState(114);
				((AssignmentContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 104L) != 0)) ) {
					((AssignmentContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(115);
				((AssignmentContext)_localctx).expr = expr();

				        std::string var = ((AssignmentContext)_localctx).ID->getText();
				        if (memory.find(var) != memory.end()) {
				            if ((((AssignmentContext)_localctx).op!=null?((AssignmentContext)_localctx).op.getText():null) == "="){
				                memory[var] = ((AssignmentContext)_localctx).expr.v;
				            } else if ((((AssignmentContext)_localctx).op!=null?((AssignmentContext)_localctx).op.getText():null) == "+="){
				                memory[var] += ((AssignmentContext)_localctx).expr.v;
				            } else if ((((AssignmentContext)_localctx).op!=null?((AssignmentContext)_localctx).op.getText():null) == "-="){
				                memory[var] -= ((AssignmentContext)_localctx).expr.v;
				            }
				        } else {
				            std::cerr << "Variable " << var << " no esta declarada.\n";
				        }
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				((AssignmentContext)_localctx).ID = match(ID);
				setState(119);
				match(T__2);
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(120);
					ternarioOper();
					}
					break;
				}

				        std::string var = ((AssignmentContext)_localctx).ID->getText();
				        if (memory.find(var) != memory.end()) {
				            // Manejo de operadores ternarios
				        } else {
				            std::cerr << "Variable" << var << " no esta declarada.\n";
				        }
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public double v;
		public ExprContext e;
		public OperMathExprContext operMathExpr;
		public OperCompExprContext operCompExpr;
		public OperAndOrContext operAndOr;
		public FunCallContext funCall;
		public SolosContext solos;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public OperMathExprContext operMathExpr() {
			return getRuleContext(OperMathExprContext.class,0);
		}
		public OperCompExprContext operCompExpr() {
			return getRuleContext(OperCompExprContext.class,0);
		}
		public OperAndOrContext operAndOr() {
			return getRuleContext(OperAndOrContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public SolosContext solos() {
			return getRuleContext(SolosContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__6);
				setState(127);
				((ExprContext)_localctx).e = expr();
				setState(128);
				match(T__7);
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).e.v;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				((ExprContext)_localctx).operMathExpr = operMathExpr(0);
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).operMathExpr.v;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				((ExprContext)_localctx).operCompExpr = operCompExpr();
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).operCompExpr.v;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(137);
				((ExprContext)_localctx).operAndOr = operAndOr(0);
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).operAndOr.v;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				((ExprContext)_localctx).funCall = funCall();
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).funCall.v;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				((ExprContext)_localctx).solos = solos();
				((ExprContext)_localctx).v =  ((ExprContext)_localctx).solos.v;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperMathExprContext extends ParserRuleContext {
		public double v;
		public OperMathExprContext a;
		public OperMathExprContext e;
		public OperMathIndivContext operMathIndiv;
		public FunCallContext funCall;
		public Token NUM;
		public Token ID;
		public Token op;
		public OperMathExprContext b;
		public List<OperMathExprContext> operMathExpr() {
			return getRuleContexts(OperMathExprContext.class);
		}
		public OperMathExprContext operMathExpr(int i) {
			return getRuleContext(OperMathExprContext.class,i);
		}
		public OperMathIndivContext operMathIndiv() {
			return getRuleContext(OperMathIndivContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TerminalNode NUM() { return getToken(tpCompiladoresParser.NUM, 0); }
		public TerminalNode ID() { return getToken(tpCompiladoresParser.ID, 0); }
		public OperMathExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operMathExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).enterOperMathExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpCompiladoresListener ) ((tpCompiladoresListener)listener).exitOperMathExpr(this);
		}
	}

	public final OperMathExprContext operMathExpr() throws RecognitionException {
		return operMathExpr(0);
	}
